[project]
name = "rest_assured"
version = "1.1.0"
description = ""
authors = [
    {name = "AndreyQuantum",email = "zelentsov1254@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "alembic (>=1.17.2,<2.0.0)",
    "syncpg (>=1.1.3,<2.0.0)",
    "testcontainers (>=4.13.3,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
pythonpath = ["rest_assured"]
