[project]
name = "rest_assured"
version = "1.1.0"
description = ""
authors = [
    {name = "AndreyQuantum",email = "zelentsov1254@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "alembic (>=1.17.2,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx (>=0.28.0,<0.29.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-httpx = ">=0.30.0,<1.0.0"
ruff = ">=0.6.0,<1.0.0"
mypy = ">=1.10.0,<2.0.0"
python-semantic-release = ">=9.0.0,<11.0.0"
testcontainers = ">=4.13.3,<5.0.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
pythonpath = ["rest_assured"]
testpaths = ["rest_assured/tests", "rest_assured/integrational_tests"]
asyncio_mode = "auto"
